--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <!--meta tag-->
     <meta charset="utf-8">
@@ -16,40 +15,45 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-
 <body>
     <!--bootstrap grid-->
     <div class="container-fluid">
-        <div class="navbar navbar-expand-lg navbar-light bg-light">
-            <!--buttons are generated-->
-            <div id="buttons-view">
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <h1>GifTastic!</h1>
             </div>
         </div>
-        <img src="https://media1.giphy.com/media/3o85xkQpyMlnBkpB9C/200_s.gif"
-            data-still="https://media1.giphy.com/media/3o85xkQpyMlnBkpB9C/200_s.gif"
-            data-animate="https://media1.giphy.com/media/3o85xkQpyMlnBkpB9C/200.gif" data-state="still" class="gif">
-        <img src="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200_s.gif"
-            data-still="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200_s.gif"
-            data-animate="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200.gif" data-state="still" class="gif">
-        <img src="https://media3.giphy.com/media/W6LbnBigDe4ZG/200_s.gif"
-            data-still="https://media3.giphy.com/media/W6LbnBigDe4ZG/200_s.gif"
-            data-animate="https://media3.giphy.com/media/W6LbnBigDe4ZG/200.gif" data-state="still" class="gif">
-  <!--javascript  and jquery link-->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="assets/javascript/giftastic.js"></script>
+        <div class="navbar navbar-nav">
+            <!--buttons-->
+            <div id="buttons-view">
+            </div>
+        </div>
+        <!--topics-->
+        <div class="row">
+            <div class="col-sm-10">
+                <!--topics gif-->
+                <div id="topicGifs">
+                </div>
+            </div>
+            <!--<div class="row">-->
+            <div class="col-sm-2" id="form-input">
+                <!--adding a form-->
+                <form id="topic-form">
+                    <label for="topic-input">Add a topic</label><br>
+                    <input type="text" id="topic-input" placeholder="Horses" required />
+            <br>
+            <input id="add-topic" type="submit" value="Submit">
+            <!--Giphy compliance-->
+            <span><a class="navbar-brand" href="https://giphy.com/" target= "_blank">
+                <img src="./assets/Images/GiphyLogo.gif" alt="Powered by GIPHY">
+              </a></span>   
+              </form>         
+          </div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="./assets/Javascript/apps.js"></script>
 </body>
-
 </html>
