changed the theme and added a fontd :

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div class="col-sm-2" id="form-input">
                 <!--adding a form-->
                 <form id="topic-form">
-                    <label for="topic-input">Add a topic</label><br>
-                    <input type="text" id="topic-input" placeholder="Horses" required />
+                    <label for="topic-input">Add an artist!</label><br>
+                    <input type="text" id="topic-input" placeholder="Artist/Band" required />
             <br>
             <input id="add-topic" type="submit" value="Submit">
             <!--Giphy compliance-->
