made major progress with css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--bootstrap grid-->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12" id="head">
                 <h1>GifTastic!</h1>
             </div>
         </div>
